# NEO

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPECIFICATION.md
.github/workflows/: ci.yml  release.yml
benches/: README.md
crates/: Cargo.toml
crates/neo-cli/: Cargo.toml
crates/neo-cli/src/: main.rs
crates/neo-cli/tests/: integration_test.rs
crates/neo-codec/: Cargo.toml
crates/neo-codec/src/: dac.rs  enhance.rs  error.rs  flac.rs  lib.rs  opus.rs  pcm.rs  residual.rs
crates/neo-edit/: Cargo.toml
crates/neo-edit/src/: diff.rs  error.rs  graph.rs  history.rs  lib.rs
crates/neo-ffi/: Cargo.toml
crates/neo-ffi/include/: neo.h
crates/neo-ffi/src/: lib.rs  plugin.rs  wasm.rs
crates/neo-format/: Cargo.toml
crates/neo-format/benches/: format_bench.rs
crates/neo-format/examples/: create_neo.rs  read_neo.rs  round_trip.rs
crates/neo-format/fuzz/: Cargo.toml
crates/neo-format/fuzz/fuzz_targets/: fuzz_header.rs  fuzz_reader.rs  fuzz_round_trip.rs
crates/neo-format/src/: chunk.rs  error.rs  header.rs  lib.rs  reader.rs  stem.rs  writer.rs
crates/neo-format/tests/: cross_crate_test.rs
crates/neo-metadata/: Cargo.toml
crates/neo-metadata/src/: c2pa.rs  error.rs  lib.rs  schema.rs  temporal.rs  web3.rs
crates/neo-spatial/: Cargo.toml
crates/neo-spatial/src/: ambisonics.rs  binaural.rs  error.rs  lib.rs  object.rs
crates/neo-stream/: Cargo.toml
crates/neo-stream/src/: cid.rs  error.rs  lib.rs  merkle.rs  p2p.rs  progressive.rs
docs/: api-guide.md  architecture.md  getting-started.md
examples/: README.md
neural/: pyproject.toml  requirements.txt
neural/neo_neural/: __init__.py  export_onnx.py  separator.py  train_stems.py
neural/neo_neural/dac_fork/: __init__.py
