[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-neural"
version = "0.1.0"
description = "Neural audio components for the NEO format — DAC fork, ONNX export, source separation"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "descript-audio-codec>=1.0.0",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "soundfile>=0.12",
    "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
separation = [
    "demucs>=4.0",
]

[tool.setuptools.packages.find]
include = ["neo_neural*"]

[tool.ruff]
line-length = 100
target-version = "py310"
