[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-neural"
version = "0.1.0"
description = "Neural audio components for the NEO format — DAC fork, ONNX export, source separation"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
dac = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "descript-audio-codec>=1.0.0",
    "librosa>=0.10",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.16",
]
separation = [
    "demucs>=4.0",
]

[tool.setuptools.packages.find]
include = ["neo_neural*"]

[tool.ruff]
line-length = 100
target-version = "py310"
