[package]
name = "neo-format"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NEO container format reader/writer — handles .neo file structure, chunks, and stem entries"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "format_bench"
harness = false
