[package]
name = "neo-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Smart metadata for NEO — JSON-LD schemas, C2PA credentials, temporal lyrics/chords, Web3 rights"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
