[package]
name = "neo-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Streaming and distribution for NEO — Merkle tree chunking, progressive LOD, P2P via IPFS"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
