[package]
name = "neo-format-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
neo-format = { path = ".." }
tempfile = "3"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_reader"
path = "fuzz_targets/fuzz_reader.rs"
doc = false

[[bin]]
name = "fuzz_header"
path = "fuzz_targets/fuzz_header.rs"
doc = false

[[bin]]
name = "fuzz_round_trip"
path = "fuzz_targets/fuzz_round_trip.rs"
doc = false
